--- a/module/pom.xml
+++ b/module/pom.xml
@@ -11,6 +11,14 @@
         <artifactId>spatial</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+
+    <!-- PROPERTIES USED FOR LOGBACK -->
+    <properties>
+        <application.name>${parent.artifactId}</application.name>
+        <application.version>${parent.version}</application.version>
+        <application.logfile>/app/logs/${parent.artifactId}/${parent.artifactId}.log</application.logfile>
+        <application.logfile.boot>/app/logs/${parent.artifactId}/${parent.artifactId}-boot.log</application.logfile.boot>
+    </properties>
     
     <build>
         <finalName>${project.name}</finalName>
@@ -70,7 +78,7 @@
             <artifactId>rest</artifactId>
             <version>${project.parent.version}</version>
             <type>war</type>
-        </dependency> 
+        </dependency>
     </dependencies>
     
     <!-- USE following command to run this profile: mvn clean install -P wildfly-deploy wildfly:deploy -Dhostname=127.0.0.1 -Dport=9990 -Dusername=admin -Dpassword=asdf  -->
