initial locally deployed version
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/Modules/Spatial/APP@2841 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/model/pom.xml
+++ b/model/pom.xml
@@ -15,8 +15,8 @@
     
     <properties>
         <!-- the name of the wsdlfiles wothout fileending -->
-        <wsdl.contract.name>MovementModuleService</wsdl.contract.name>
-        <wsdl.source.name>MovementDataSourceService</wsdl.source.name>
+        <!--<wsdl.contract.name>MovementModuleService</wsdl.contract.name>
+        <wsdl.source.name>MovementDataSourceService</wsdl.source.name>-->
     </properties>
     
     <profiles>
