--- a/service/src/main/resources/logging.properties
+++ b/service/src/main/resources/logging.properties
@@ -1,11 +1,11 @@
 #Properties
-#Wed Jul 08 15:53:34 GMT+01:00 2015
+#Thu Jul 16 13:45:20 CEST 2015
 sl4j.version=1.7.12
 application.logfile=/app/logs/spatial/spatial.log
 application.error.logfile=/app/logs/spatial/spatial-error.log
 junit.version=4.10
 application.name=spatial
-vessel.module.version=1.0.4-SNAPSHOT
+vessel.module.version=1.0.5-SNAPSHOT
 logback.core.version=1.1.2
 logback.version=1.1.2
 application.version=1.0-SNAPSHOT
