added rest mock resource for testing purposes
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/Modules/Spatial/APP@2883 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/module/pom.xml
+++ b/module/pom.xml
@@ -47,7 +47,7 @@
                         <webModule>
                             <groupId>${project.groupId}</groupId>
                             <context-root>${project.parent.artifactId}</context-root>
-                            <artifactId>rest</artifactId>
+                            <artifactId>eu.europe.ec.fisheries.uvms.spatial.rest</artifactId>
                         </webModule>
                     </modules>
                     <skinnyWars>true</skinnyWars>
@@ -77,7 +77,7 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>rest</artifactId>
+            <artifactId>eu.europe.ec.fisheries.uvms.spatial.rest</artifactId>
             <version>${project.parent.version}</version>
             <type>war</type>
         </dependency>
