--- a/module/src/main/resources/config.properties
+++ b/module/src/main/resources/config.properties
@@ -3,4 +3,4 @@ module.name=${application.name}
 
 #USM related properties
 usm.deplyment.descriptor.force-update=true
-usm.rest.server=http://localhost:8080
+usm.eu.europe.ec.fisheries.uvms.spatial.rest.server=http://localhost:8080
