--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>rest</artifactId>
-    <name>${project.parent.artifactId}-rest</name>
+    <artifactId>eu.europe.ec.fisheries.uvms.spatial.rest</artifactId>
+    <name>${project.parent.artifactId}-eu.europe.ec.fisheries.uvms.spatial.rest</name>
     <packaging>war</packaging>
 
     <parent>
@@ -51,10 +51,10 @@
         </plugins>
     </build>
     
-    <!-- USE following command to run this profile: mvn clean install -P generate-rest-doc -Dhostname=127.0.0.1 -Dport=8080  -->
+    <!-- USE following command to run this profile: mvn clean install -P generate-eu.europe.ec.fisheries.uvms.spatial.rest-doc -Dhostname=127.0.0.1 -Dport=8080  -->
     <profiles>
         <profile>
-            <id>generate-rest-doc</id>
+            <id>generate-eu.europe.ec.fisheries.uvms.spatial.rest-doc</id>
             <build>
                 <plugins>
                     <plugin>
@@ -76,7 +76,7 @@
                                     <useStandardDocletOptions>false</useStandardDocletOptions>
                                     <additionalparam>-apiVersion ${project.version}
                                         -docBasePath http://${hostname}:${port}/${project.parent.artifactId}/apidocs
-                                        -apiBasePath http://${hostname}:${port}/${project.parent.artifactId}/rest</additionalparam>
+                                        -apiBasePath http://${hostname}:${port}/${project.parent.artifactId}/eu.europe.ec.fisheries.uvms.spatial.rest</additionalparam>
                                 </configuration>
                                 <goals>
                                     <goal>javadoc</goal>
