fix compilation problem
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/Modules/Spatial/APP@2887 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/module/pom.xml
+++ b/module/pom.xml
@@ -42,12 +42,12 @@
                         </ejbModule>
                         <ejbModule>
                             <groupId>${project.groupId}</groupId>
-                            <artifactId>spatial-model</artifactId>
+                            <artifactId>model</artifactId>
                         </ejbModule>
                         <webModule>
                             <groupId>${project.groupId}</groupId>
                             <context-root>${project.parent.artifactId}</context-root>
-                            <artifactId>eu.europe.ec.fisheries.uvms.spatial.rest</artifactId>
+                            <artifactId>rest</artifactId>
                         </webModule>
                     </modules>
                     <skinnyWars>true</skinnyWars>
@@ -71,13 +71,13 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>spatial-model</artifactId>
+            <artifactId>model</artifactId>
             <version>1.0-SNAPSHOT</version>
             <type>ejb</type>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>eu.europe.ec.fisheries.uvms.spatial.rest</artifactId>
+            <artifactId>rest</artifactId>
             <version>${project.parent.version}</version>
             <type>war</type>
         </dependency>
