--- a/service/src/main/resources/logging.properties
+++ b/service/src/main/resources/logging.properties
@@ -1,15 +1,18 @@
 #Properties
-#Mon Jul 20 15:37:25 CEST 2015
+#Tue Jul 21 19:55:30 CEST 2015
 sl4j.version=1.7.12
-org.mapstruct.version=1.0.0.CR1
-application.logfile=/app/logs/spatial/spatial.log
 application.error.logfile=/app/logs/spatial/spatial-error.log
+application.logfile=/app/logs/spatial/spatial.log
 junit.version=4.10
 application.name=spatial
 vessel.module.version=1.0.5-SNAPSHOT
-movement.module.version=1.0.2-SNAPSHOT
+project.reporting.outputEncoding=UTF-8
+mapstruct.version=1.0.0.CR1
+movement.model.version=1.0.2-SNAPSHOT
 logback.core.version=1.1.2
+project.build.sourceEncoding=UTF-8
 logback.version=1.1.2
-application.version=1.0-SNAPSHOT
+application.version=spatial
 javaee.version=7.0
+jackson.version=2.6.0
 mockito.version=1.9.5
