--- a/module/pom.xml
+++ b/module/pom.xml
@@ -13,15 +13,6 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <!-- PROPERTIES USED FOR LOGBACK -->
-    <properties>
-        <application.name>${parent.artifactId}</application.name>
-        <application.version>${parent.version}</application.version>
-        <application.logfile>/app/logs/${parent.artifactId}/${parent.artifactId}.log</application.logfile>
-        <application.logfile.boot>/app/logs/${parent.artifactId}/${parent.artifactId}-boot.log
-        </application.logfile.boot>
-    </properties>
-
     <build>
         <finalName>${project.name}</finalName>
         <plugins>
@@ -72,7 +63,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>model</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.parent.version}</version>
             <type>ejb</type>
         </dependency>
         <dependency>
@@ -80,12 +71,6 @@
             <artifactId>rest</artifactId>
             <version>${project.parent.version}</version>
             <type>war</type>
-        </dependency>
-
-        <dependency>
-            <groupId>org.glassfish.jersey.core</groupId>
-            <artifactId>jersey-client</artifactId>
-            <version>2.19</version>
         </dependency>
 
         <dependency>
@@ -97,53 +82,9 @@
         <dependency>
             <groupId>com.github.tomakehurst</groupId>
             <artifactId>wiremock</artifactId>
-            <version>1.56</version>
-
-            <!-- Include everything below here if you have dependency conflicts -->
             <classifier>standalone</classifier>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.mortbay.jetty</groupId>
-                    <artifactId>jetty</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.google.guava</groupId>
-                    <artifactId>guava</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.fasterxml.jackson.core</groupId>
-                    <artifactId>jackson-core</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.fasterxml.jackson.core</groupId>
-                    <artifactId>jackson-annotations</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.fasterxml.jackson.core</groupId>
-                    <artifactId>jackson-databind</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.apache.httpcomponents</groupId>
-                    <artifactId>httpclient</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.skyscreamer</groupId>
-                    <artifactId>jsonassert</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>xmlunit</groupId>
-                    <artifactId>xmlunit</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.jayway.jsonpath</groupId>
-                    <artifactId>json-path</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>net.sf.jopt-simple</groupId>
-                    <artifactId>jopt-simple</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
+
     </dependencies>
 
     <!-- USE following command to run this profile: mvn clean install -P wildfly-deploy wildfly:deploy -Dhostname=127.0.0.1 -Dport=9990 -Dusername=admin -Dpassword=asdf  -->
