introduce maven dependency management, cleanup siome duplicated dependencies in pom files, introduce mock rest resource for client testing purposes
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/Modules/Spatial/APP@2967 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/model/pom.xml
+++ b/model/pom.xml
@@ -12,12 +12,15 @@
         <artifactId>spatial</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    
-    <properties>
-        <!-- the name of the wsdlfiles wothout fileending -->
-        <!--<wsdl.contract.name>MovementModuleService</wsdl.contract.name>
-        <wsdl.source.name>MovementDataSourceService</wsdl.source.name>-->
-    </properties>
+
+    <dependencies>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+
+    </dependencies>
     
     <profiles>
         <profile>
