--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <mockito.version>1.9.5</mockito.version>
-        <junit.version>4.10</junit.version>
         <javaee.version>7.0</javaee.version>
         <sl4j.version>1.7.12</sl4j.version>
         <logback.version>1.1.2</logback.version>
@@ -79,11 +78,17 @@
             </dependency>
 
             <!-- TEST -->
-
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>${junit.version}</version>
+                <version>4.10</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.glassfish.jersey.core</groupId>
+                <artifactId>jersey-client</artifactId>
+                <version>2.19</version>
                 <scope>test</scope>
             </dependency>
 
