--- a/module/src/test/resources/config.properties
+++ b/module/src/test/resources/config.properties
@@ -2,5 +2,5 @@
 module.name=spatialModule
 
 #USM related properties
-usm.deplyment.descriptor.force-update=true
-usm.eu.europe.ec.fisheries.uvms.spatial.rest.server=http://localhost:8080
+usm.deployment.descriptor.force-update=true
+usm.rest.server=http://localhost:8089
