renaming 'module' maven module into deploy, due to the frequent confusion we all have between 'module' and 'model'
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/Modules/Spatial/APP@3041 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/deploy/src/main/resources/config.properties
+++ b/deploy/src/main/resources/config.properties
@@ -3,4 +3,4 @@ module.name=${application.name}
 
 #USM related properties
 usm.deplyment.descriptor.force-update=true
-usm.eu.europe.ec.fisheries.uvms.spatial.rest.server=http://localhost:8080
+usm.rest.server=http://localhost:8080
