--- a/service/src/main/resources/logging.properties
+++ b/service/src/main/resources/logging.properties
@@ -1,17 +1,22 @@
 #Properties
-#Tue Jul 21 22:18:54 CEST 2015
-sl4j.version=1.7.12
-application.error.logfile=/app/logs/spatial/spatial-error.log
-application.logfile=/app/logs/spatial/spatial.log
-application.name=spatial
-vessel.module.version=1.0.5-SNAPSHOT
+#Thu Jul 23 11:55:59 GMT+01:00 2015
 mapstruct.version=1.0.0.CR1
-project.reporting.outputEncoding=UTF-8
-movement.model.version=1.0.2-SNAPSHOT
-logback.core.version=1.1.2
-project.build.sourceEncoding=UTF-8
-logback.version=1.1.2
-application.version=spatial
-javaee.version=7.0
-jackson.version=2.6.0
+postgis.jdbc.version=1.5.2
+application.error.logfile=/app/logs/spatial/spatial-error.log
+hibernate.version=4.3.10.Final
+application.logfile=/app/logs/spatial/spatial.log
+application.logfile.boot=/app/logs/spatial/spatial-boot.log
 mockito.version=1.9.5
+application.name=spatial
+project.build.sourceEncoding=UTF-8
+sl4j.version=1.7.12
+logback.version=1.1.2
+project.reporting.outputEncoding=UTF-8
+hibernate.spatial.version=4.3
+movement.model.version=1.0.2-SNAPSHOT
+jackson.version=2.6.0
+application.version=spatial
+postgres.jdbc.version=9.4-1201-jdbc41
+vessel.module.version=1.0.5-SNAPSHOT
+javaee.version=7.0
+logback.core.version=1.1.2
