--- a/service/src/test/resources/config.properties
+++ b/service/src/test/resources/config.properties
@@ -4,3 +4,5 @@ module.name=spatialModule
 #USM related properties
 usm.deployment.descriptor.force-update=true
 usm.rest.server=http://localhost:8089
+usm.admin.rest.username=usm_bootstrap
+usm.admin.rest.password=password
