--- a/service/src/main/resources/config.properties
+++ b/service/src/main/resources/config.properties
@@ -1,6 +1,8 @@
 #this is dynamic because we need it in the ModuleInitializerBean and in the USM deployment descriptor
-module.name=${application.name}
+module.name=spatial
 
 #USM related properties
 usm.deplyment.descriptor.force-update=true
 usm.rest.server=http://localhost:8080
+usm.admin.rest.username=usm_bootstrap
+usm.admin.rest.password=password
