git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/Modules/Spatial/APP@3138 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,8 @@
         <mapstruct.version>1.0.0.CR1</mapstruct.version>
         <jackson.version>2.6.0</jackson.version>
         <logback.core.version>1.1.2</logback.core.version>
-        <vessel.module.version>1.0.5-SNAPSHOT</vessel.module.version>
-        <movement.model.version>1.0.2-SNAPSHOT</movement.model.version>
+        <vessel.version>1.0.5-SNAPSHOT</vessel.version>
+        <movement.version>1.0.3-SNAPSHOT</movement.version>
         <application.name>${project.parent.artifactId}</application.name>
         <application.version>${project.parent.version}</application.version>
         <application.logfile>/app/logs/${project.parent.artifactId}/${project.parent.artifactId}.log</application.logfile>
@@ -53,16 +53,26 @@
                 <version>${project.parent.version}</version>
             </dependency>
 
-            <dependency>
-                <groupId>eu.europa.ec.fisheries.uvms.movement</groupId>
-                <artifactId>movement-model</artifactId>
-                <version>${movement.model.version}</version>
-            </dependency>
+            <!-- Vessel module dependencies -->
 
             <dependency>
                 <groupId>eu.europa.ec.fisheries.uvms.vessel</groupId>
                 <artifactId>vessel-model</artifactId>
-                <version>${vessel.module.version}</version>
+                <version>${vessel.version}</version>
+            </dependency>
+
+            <!-- Movement module dependencies -->
+
+            <dependency>
+                <groupId>eu.europa.ec.fisheries.uvms.movement</groupId>
+                <artifactId>model</artifactId>
+                <version>${movement.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>eu.europa.ec.fisheries.uvms.movement</groupId>
+                <artifactId>movement-message</artifactId>
+                <version>${movement.version}</version>
             </dependency>
 
             <dependency>
