SC#UNIONVMS-473 Using Hibernate Spatial to access DB
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/Modules/Spatial/APP@3140 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -24,7 +24,7 @@
 
         <dependency>
             <groupId>eu.europa.ec.fisheries.uvms.movement</groupId>
-            <artifactId>model</artifactId>
+            <artifactId>movement-model</artifactId>
         </dependency>
 
         <dependency>
