--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,8 @@
         <mapstruct.version>1.0.0.CR1</mapstruct.version>
         <jackson.version>2.6.0</jackson.version>
         <logback.core.version>1.1.2</logback.core.version>
-        <vessel.version>1.0.5-SNAPSHOT</vessel.version>
-        <movement.version>1.0.3-SNAPSHOT</movement.version>
+        <vessel.module.version>1.0.5-SNAPSHOT</vessel.module.version>
+        <movement.model.version>1.0.2-SNAPSHOT</movement.model.version>
         <application.name>${project.parent.artifactId}</application.name>
         <application.version>${project.parent.version}</application.version>
         <application.logfile>/app/logs/${project.parent.artifactId}/${project.parent.artifactId}.log</application.logfile>
@@ -53,26 +53,16 @@
                 <version>${project.parent.version}</version>
             </dependency>
 
-            <!-- Vessel module dependencies -->
+            <dependency>
+                <groupId>eu.europa.ec.fisheries.uvms.movement</groupId>
+                <artifactId>movement-model</artifactId>
+                <version>${movement.model.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>eu.europa.ec.fisheries.uvms.vessel</groupId>
                 <artifactId>vessel-model</artifactId>
-                <version>${vessel.version}</version>
-            </dependency>
-
-            <!-- Movement module dependencies -->
-
-            <dependency>
-                <groupId>eu.europa.ec.fisheries.uvms.movement</groupId>
-                <artifactId>model</artifactId>
-                <version>${movement.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>eu.europa.ec.fisheries.uvms.movement</groupId>
-                <artifactId>movement-message</artifactId>
-                <version>${movement.version}</version>
+                <version>${vessel.module.version}</version>
             </dependency>
 
             <dependency>
@@ -256,6 +246,18 @@
             <layout>default</layout>
         </snapshotRepository>
     </distributionManagement>
+
+    <!-- add repositories for JTS and Hibernate Spatial and Hibernate (JBoss) -->
+    <repositories>
+        <repository>
+            <id>OSGEO GeoTools repo</id>
+            <url>http://download.osgeo.org/webdav/geotools</url>
+        </repository>
+        <repository>
+            <id>Hibernate Spatial repo</id>
+            <url>http://www.hibernatespatial.org/repository</url>
+        </repository>
+    </repositories>
 
     <scm>
         <connection>scm:svn:https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/Modules/Spatial/APP</connection>
