--- a/pom.xml
+++ b/pom.xml
@@ -169,6 +169,13 @@
             </dependency>
 
             <dependency>
+                <groupId>org.jboss.resteasy</groupId>
+                <artifactId>resteasy-jackson-provider</artifactId>
+                <version>3.0.10.Final</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
                 <groupId>com.github.tomakehurst</groupId>
                 <artifactId>wiremock</artifactId>
                 <version>1.56</version>
