--- a/service/pom.xml
+++ b/service/pom.xml
@@ -100,6 +100,12 @@
             <artifactId>commons-io</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jackson-provider</artifactId>
+            <version>3.0.10.Final</version>
+        </dependency>
+
     </dependencies>
 
     <build>
